--- a/API/package.json
+++ b/API/package.json
@@ -9,7 +9,8 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "dev" : "nodemon src/server.js"
+    "dev" : "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
